src/test/deca/context/invalid/created/string-in-int.deca
//Tentative d'affectation d'une valeur à une variable de type différent
{
	int a = "coucou";
}